<resources>
    <string name="app_name">WeightTrack</string>
    <string name="nn_lbs">NN lbs</string>
    <string name="weigh">Weigh</string>
    <string name="yyyy_mm_dd_hh_mm_ss">yyyy-mm-dd hh:mm:ss</string>
    <string name="get_data">Get Data</string>
    <string name="weight">Weight</string>
    
    <string name="title_activity_settings">Settings</string>
    
    <!-- Strings related to Settings -->
    
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    
    <string name="pref_title_autosync">Enable Auto Sync</string>
    <string name="pref_description_autosync">When user is logged in, data is
        automatically synced to an online database.
    </string>
    
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    
    <string name="pref_title_unit_of_measurement">Unit of Measurement</string>
    <string-array name="pref_example_list_titles">
        <item>Kilogram (kg)</item>
        <item>Pound (lb)</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    
    <string-array name="multi_select_list_preference_default_value" />
    
    <string name="pref_title_system_sync_settings">System sync settings</string>
    
    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    
    <string name="pref_title_alert_notifications">Enable push notifications</string>
    
    <string name="pref_title_alerttone">Alert tone</string>
    <string name="pref_ringtone_silent">Silent</string>
    
    <string name="pref_title_vibrate">Vibrate</string>
</resources>
